@@ -154,6 +154,8 @@ the responsibility of Carlo Cavazzoni.
 Contributors to \qe, beyond the authors of the papers
 mentioned in Sect.\ref{SubSec:Terms}, include:
 \begin{itemize}
+  \item Hsin-Yu Ho and Marcos Calegari Andrade (U.Princeton) for SCAN
+  and other meta-GG functionals with \texttt{libxc};
   \item Fabio Affinito (CINECA) for ELPA support, for contributions
   to the FFT library, and for various parallelization improvements;
   \item Sebastiano Caravati for direct support of GTH pseudopotentials
