@@ -1,5 +1,8 @@
 Problems fixed by development version:
 
+  * NASTY BUG IN META-GGA WITH LIBXC (tpss, tb09, scan): incorrect results
+    thanks to Hsin-Yu Ho and Marcos Calegari Andrade  (r14000)
+
   * Electron-phonon with ibrav=0 not working due to a mismatch between
     what is written and what is read in "fildyn" (r13999)
 
